--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@ body {
   text-align:left;
   justify-content: center;
   padding: 10px;
+  margin: auto;
 } */
 
 .cover{
@@ -62,7 +63,7 @@ body {
 }
 
 .bg-primary {
-  background-color: rgb(175, 14, 175) !important;
+  background-color: rgb(52, 2, 35) !important;
 }
 
   .message {
