--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
 
   .bg-footer{
     background-color: rgb(0, 0, 0, 0.8);
-    padding-top: 20px;
+    /* padding-top: 20px; */
   }
   
 
@@ -47,12 +47,6 @@ body {
     background-size: cover;
 }
 
-/* .row{
-  text-align:left;
-  justify-content: center;
-  padding: 10px;
-  margin: auto;
-} */
 
 .cover{
   background:linear-gradient(0deg, rgba(4, 4, 4, 0.5) 0%, rgba(0, 0, 0, 0.30) 100%), url('../src/assets/Serv/bgg.jpg');
@@ -75,87 +69,6 @@ body {
     padding-left: 10px;
     padding-top: 10px;
 }
-
-
-/* .form-control{
-  width: 300px;
-  height: 50px;
-  flex-shrink: 0;
-  border-radius: 8px;
-  border: 1px solid #515151;
-  padding-left: 10px;
-}
-
-.form{
-  display: flex;
-  width: 621px;
-  align-items: flex-start;
-  align-content: flex-start;
-  gap: 20px 21px;
-  flex-wrap: wrap;
-}
-
-
-.footer-logistic {
-  background: #000;
-  color: #fff;
-}
-
-.container-footer {
-  padding: 7px;
-}
-
-
-
-.col-span,
-li {
-  align-items: center;
-  list-style: none;
-  margin-top: 12px;
-}
-
-.col-span {
-  padding: 20px;
-}
-
-.flexing {
-  display: inline-flex;
-  gap: 12px;
-  margin-bottom: 20px;
-}
-
-.max {
-  max-width: 140px;
-  height: 92.787px;
-  flex-shrink: 0;
-}
-
-.mt-5 {
-  margin-top: 12px;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.bt {
-  margin-top: 20px;
-}
-
-
-.right {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;  /* This sets the gap between child elements */
-/* } */ 
-
-
-
-/* .rows {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-} */
-
 
 .submit{
   display: flex;
